--- a/src/main/resources/templates/article/addArticle.html
+++ b/src/main/resources/templates/article/addArticle.html
@@ -16,7 +16,7 @@
         <div class="card-body">
             <div class="col-md-10">
                 <form action="#" th:action="@{/article/add}"
-                      th:object="${article}" method="post">
+                      th:object="${article}" method="post" enctype="multipart/form-data">
                     <div class="row">
 
                         <div class="form-group col-md-8">
@@ -36,8 +36,13 @@
                                 th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-8">
+                            <label for="picture" class="col-form-label">Picture</label>
+                            <input class="form-control" type="file"
+                                   name="files" id="picture" multiple>
+                        </div>
+                        <div class="form-group col-md-8">
                             <label for="provider" class="col-form-label">Providers</label>
-                            <select name="providerId" class="form-control">
+                            <select name="providerId" class="form-control" id="provider">
                                 <option th:each="pr: ${providers}"
                                         th:value="${pr.id}" th:text="${pr.name}"/>
                             </select>
