upload image dans article

--- a/src/main/resources/templates/article/showArticle.html
+++ b/src/main/resources/templates/article/showArticle.html
@@ -43,8 +43,7 @@ MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
                         </div>
                         <div class="form-group col-md-6">
                             <label for="label" class="col-form-label">Picture</label>
-                            <img alt="Image" th:src="@{'/uploads/'+
-${article.picture}}" width="250" height="250" id="label"/>
+                            <img alt="Image" th:src="@{'/images/articles/'+ ${article.picture}}" width="250" height="250" id="label"/>
                         </div>
 
                         <div class="form-group col-md-8">
