--- a/src/main/resources/templates/article/updateArticle.html
+++ b/src/main/resources/templates/article/updateArticle.html
@@ -37,8 +37,13 @@
                                 th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-8">
+                            <label for="picture" class="col-form-label">Picture</label>
+                            <input class="form-control" type="file"
+                                   name="files" id="picture" multiple>
+                        </div>
+                        <div class="form-group col-md-8">
                             <label for="provider" class="col-form-label">Select Provider</label>
-                            <select name="providerId" class="form-control">
+                            <select name="providerId" class="form-control" id="provider">
                                 <option th:each="pr: ${providers}"
                                         th:value="${pr.id}"
                                         th:text="${pr.name}"
