--- a/src/main/resources/templates/provider/listProviders.html
+++ b/src/main/resources/templates/provider/listProviders.html
@@ -25,6 +25,7 @@
                         <table class="table table-striped table-responsivemd">
                             <thead>
                             <tr>
+                                <th>Logo</th>
                                 <th>Name</th>
                                 <th>Email</th>
                                 <th>Address</th>
@@ -34,6 +35,7 @@
                             </thead>
                             <tbody>
                             <tr th:each="provider : ${providers}">
+                                <td> <img alt="Image" th:src="@{'/images/providers/'+ ${provider.logo}}" width="50" height="50" id="label"/></td>
                                 <td th:text="${provider.name}"></td>
                                 <td th:text="${provider.email}"></td>
                                 <td th:text="${provider.address}"></td>
