--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,9 +8,9 @@
 <div class="container">
     <div class="starter-template">
         <h1>Welcome to our Article Managment System Dashboard</h1>
-        <h2>1. Visit our Providers, You must have USER role <a
+        <h2>1. Visit our Providers, You must have ADMIN or SUPERADMIN roles <a
                 th:href="@{/provider/list}">Providers</a></h2>
-        <h2>2. Visit our Article, You must have USER or ADMIN roles<a
+        <h2>2. Visit our Article, You must have USER or SUPERADMIN roles<a
                 th:href="@{/article/list}">Articles</a></h2>
         <!-- h2>3. Visit <a th:href="@{/about}">Normal page</a></h2-->
     </div>
